--- a/less/flex.less
+++ b/less/flex.less
@@ -36,7 +36,6 @@ body {
 	-webkit-flex: 1 1 auto;
 	display: -webkit-flex;
 	-webkit-flex-direction: column;
-
 	flex: 1 1 auto;
 	display: flex;
 	flex-direction: column;
@@ -156,7 +155,6 @@ body {
 	max-width: @right-cell-width;
   	z-index: 1;
   	margin-left: 10px;
-
 }
 
 #mid-pane .tab-content,
@@ -218,9 +216,3 @@ body {
 	background-color: @gray-light;
 }
 
-::-webkit-scrollbar {
-  background: rgba(32,32,32,0.5);
-}
-::-webkit-scrollbar-thumb {
-	background: rgba(96,96,96,0.3);
-}
